- fix a problem with tabs alignments

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -766,6 +766,10 @@ body:not(.logged-in) #user-dropdown:hover {
     justify-content: flex-end;
 }
 
+.nav-pills {
+    display: flex;
+}
+
 /*****************************************************************************************************************************************************
  * Loader
  */
